simd not working good (okeyish for 4 groups, fails for 16)